--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Liang Liang"
 title_separator          : "-"
 name                     : &name "Liang Liang"
 description              : &description "PhD student at Imperial College London"
-url                      : https://nopuzzle.github.io/LiangLiang/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://nopuzzle.github.io/LiangLiang # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "NoPuzzle/LiangLiang"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
